style.css
:root {
  --color-primary-blue-500:  hsl(215, 51%, 70%);
  --color-primary-cyan-400: hsl(178, 100%, 50%);
  --color-neutral-blue-950: hsl(217, 54%, 11%);
  --color-neutral-blue-900: hsl(216, 50%, 16%);
  --color-neutral-blue-800:  hsl(215, 32%, 27%);
  --color-neutral-white: hsl(0, 0%, 100%);
}

* {
  padding: 0;
  margin: 0;
  /* box-sizing: border-box; */
}

body {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-neutral-blue-950);
  color: var(--color-primary-blue-500);
  font-family: 'Outfit', sans-serif;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
  width: 18.875rem;
  padding: 1.5rem;
  background-color: var(--color-neutral-blue-900);
  border-radius: 15px;
}

.img {
  display: flex;
  position: relative;
  width: 100%;
}

.img-nfc {
  position: relative;
  width: inherit;
  border-radius: 0.5rem;
  z-index: 1;
}

.img::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 0.5rem;
  z-index: 2;
  background-color: var(--color-primary-cyan-400);
  opacity: 0.6;
  visibility: hidden;
  animation: all 0.4s;
}

.img::after {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  content: url(./images/icon-view.svg);
  color: var(--color-neutral-white);
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 0.5rem;
  z-index: 3;
  opacity: 1;
  visibility: hidden;
  animation: all 0.4s;
}

.content,
.content__info,
.content__info-text {
  display: flex;
  flex-direction: column;
}

.content__info {
  gap: 1.5rem;
  padding-bottom: 1.5rem;
  border-bottom: 1px solid var(--color-neutral-blue-800);
}

.content__info-text {
  gap: 1rem;
}

.title {
  font-size: 1.375rem;
  font-weight: 600;
  line-height: 1.25;
  color: var(--color-neutral-white);
}

.text {
  font-size: 1.125rem;
  font-weight: 300;
  line-height: 1.45;
}

.content__info-price {
  display: flex;
  justify-content: space-between;
}

.eth-price,
.date {
  display: flex;
  align-items: center;
  justify-content: start;
  gap: 0.5rem;
}

.eth-price {
  color: var(--color-primary-cyan-400);
}

.content__autor {
  display: flex;
  align-items: center;
  gap: 1rem;
  font-size: 1rem;
  margin-top: 1.5rem ;
}

.img-autor {
  width: 33px;
  border-radius: 50%;
  border: 1px solid var(--color-neutral-white);
  box-sizing: border-box;
}

.autor {
  display: inline-block;
  color: var(--color-neutral-white);
  margin-left: 0.5rem;
}

.img:hover,
.title:hover,
.autor:hover {
  cursor: pointer;
  color: var(--color-primary-cyan-400);
}

body:has(.img-nfc:hover) .title,
body:has(.img-nfc:hover) .autor, 
.img:active::after, 
.img:active::before {
  visibility: visible;
  color: var(--color-primary-cyan-400);
}
body:active .img::before {
  visibility: visible;
  animation: visibility 2s ease-in-out;
}

